syntax = "proto3";

package proto;
import "google/protobuf/timestamp.proto";
option go_package = "github.com/xuanlt1991/flight-booking/pb";

message Audit {
    google.protobuf.Timestamp created_at = 1;
    google.protobuf.Timestamp modified_at = 2;
}